# LectureForge

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf
.github/workflows/: ci.yml
app/: main.py
app/api/: process.py
app/core/: config.py
app/models/: job.py
app/services/: llm_service.py  narration_chain.py  pdf_pipeline.py  ppt_pipeline.py  ppt_processor.py  ppt_video_processor.py  qa_chain.py  slide_renderer.py  tts_service.py  video_assembler.py  video_stitcher.py
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  setup.py
backend/app/: main.py
backend/app/api/: benchmarks.py  health.py  jobs.py  process.py  websocket.py
backend/app/core/: config.py  redis.py
backend/app/services/: __init__.py  async_processor.py  job_manager.py  llm_providers.py  llm_service.py  narration_cache.py  narration_chain.py  pdf_pipeline.py  ppt_parser.py  ppt_pipeline.py  ppt_processor.py  ppt_video_processor.py  qa_chain.py  qa_validator.py  slide_renderer.py  test_narration.py  test_ppt_parser.py  test_qa_chain.py  tts_service.py  vibe_metrics.py  video_assembler.py  video_stitcher.py
backend/app/services/policy_pipeline/: policy_processor.py
backend/requirements/: requirements.txt
backend/tests/: test_health.py  test_imports.py
docs/: api.md  architecture.md  configuration.md  pipelines.md  roadmap.md  troubleshooting.md
frontend/: Dockerfile  README.md  next.config.mjs  package.json
requirements/: requirements.txt
samples/: README.md
scripts/: dev_perf_test.py  generate_test_pdf.py
(+17 files in other folders)
